--- a/public/404.html
+++ b/public/404.html
@@ -5,6 +5,8 @@
     <div id="main">
         <div class="fof">
                 <h1>Error 404</h1>
+                <a href="https://merazmamun.onrender.com">Home</a>
+                <!--Credits to https://codepen.io/akashrajendra/pen/JKKRvQ -->
         </div>
     </div>
 <body>
