Fixing styling on 404 page

--- a/public/404.html
+++ b/public/404.html
@@ -5,8 +5,10 @@
     <div id="main">
         <div class="fof">
                 <h1>Error 404</h1>
-                <a href="https://merazmamun.onrender.com">Home</a>
                 <!--Credits to https://codepen.io/akashrajendra/pen/JKKRvQ -->
+        </div>
+        <div id="homelink">
+            <a href="https://merazmamun.onrender.com">Home</a>
         </div>
     </div>
 <body>
