Cleaned up files and added a element to 404 html

--- a/public/404.html
+++ b/public/404.html
@@ -6,11 +6,10 @@
         <div class="fof">
                 <h1>Error 404</h1>
                 <!--Credits to https://codepen.io/akashrajendra/pen/JKKRvQ -->
-        </div>
-        <div id="homelink">
-            <a href="https://merazmamun.onrender.com">Home</a>
+                
         </div>
     </div>
+    <a id="home" href="https://merazmamun.onrender.com">Home</a>
 <body>
 
 </body>
