404 page a element href fixed

--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
                 <h1>Error 404</h1>
                 <!--Credits to https://codepen.io/akashrajendra/pen/JKKRvQ -->
         </div>
-        <a id="home" href="https://merazmamun.onrender.com">Home</a>
+        <a id="home" href="https://63c73e75e0f01f65aeb4c503--preeminent-twilight-8ab011.netlify.app/">Home</a>
     </div>
     
 <body>
